# eventide

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pixi.toml  xmake.lua
examples/: CMakeLists.txt
examples/async_basics/: async_basics.cpp
examples/build_system/: build_system.cpp  compile_graph.h
examples/dump_dot/: dump_dot.cpp
examples/http/: github_avatar_download.cpp  http_showcase.cpp  httpbin_cookie_flow.cpp  openai_responses.cpp
examples/ipc/: scripted_roundtrip.cpp  spawn_worker.cpp
examples/jsonrpc/: CMakeLists.txt  scripted_roundtrip.cpp  spawn_worker.cpp  stdio_server.cpp
src/ipc/: CMakeLists.txt  bincode_codec.cpp  json_codec.cpp  peer.cpp  recording_transport.cpp  transport.cpp
src/ipc/codec/: CMakeLists.txt  bincode.cpp  json.cpp
src/ipc/lsp/: position.cpp
tests/: CMakeLists.txt  main.cpp  static_expect.h
tests/async/: cancellation_tests.cpp  fs_tests.cpp  process_tests.cpp  stream_tests.cpp  task_tests.cpp  udp_tests.cpp  watcher_tests.cpp  when_tests.cpp  work_request_tests.cpp
tests/common/: functional.cpp  schema_tests.cpp  small_vector_tests.cpp
tests/deco/: backend.cc  decl.cc  descriptor.cc  git.cc  runtime.cc
tests/eventide/: async_internal_tests.cpp  cancellation_tests.cpp  fs_request_tests.cpp  fs_tests.cpp  process_tests.cpp  stream_tests.cpp  sync_tests.cpp  task_tests.cpp  udp_tests.cpp  watcher_tests.cpp  when_tests.cpp  work_request_tests.cpp
tests/integration/: stub_server.cpp
tests/ipc/: peer_logger_tests.cpp  peer_tests.cpp  test_transport.h  transport_tests.cpp
tests/ipc/lsp/: jsonrpc_traits_tests.cpp  progress_tests.cpp
tests/jsonrpc/: peer_tests.cpp  transport_tests.cpp
tests/language/: jsonrpc_traits_tests.cpp  position_tests.cpp  server_tests.cpp  uri_tests.cpp
tests/option/: option_tests.cpp
tests/reflection/: compare_tests.cpp  comptime_tests.cpp  enum_tests.cpp  name_tests.cpp  struct_tests.cpp
tests/serde/: flatbuffers_schema_tests.cpp  flatbuffers_tests.cpp  json_tests.cpp  simdjson_tests.cpp  types.h  yyjson_tests.cpp
tests/serde/bincode/: bincode_torture_tests.cpp
tests/serde/content/: dom_write_tests.cpp  yyjson_torture_tests.cpp
tests/serde/flatbuffers/: flatbuffers_tests.cpp  flatbuffers_torture_tests.cpp
tests/serde/json/: dom_tests.cpp  simdjson_attrs_tests.cpp  simdjson_config_tests.cpp  simdjson_tagged_variant_tests.cpp  simdjson_tests.cpp  simdjson_torture_tests.cpp  yyjson_torture_tests.cpp
tests/serde/simdjson/: simdjson_attrs_tests.cpp  simdjson_config_tests.cpp
tests/serde/toml/: toml_torture_tests.cpp
tests/unit/async/: cancellation_tests.cpp  directory_watcher_tests.cpp  fs_event_dir_tests.cpp  fs_event_fixture.h  fs_event_tests.cpp  fs_tests.cpp  process_tests.cpp  stream_tests.cpp  system_tests.cpp  when_tests.cpp
tests/unit/codec/: standard_case_suite.h
tests/unit/codec/bincode/: bincode_tests.cpp  bincode_torture_tests.cpp
tests/unit/codec/capnp/: capnp_torture_tests.cpp
tests/unit/codec/content/: content_variant_tests.cpp  dom_tests.cpp  dom_write_tests.cpp  serializer_tests.cpp  yyjson_torture_tests.cpp
tests/unit/codec/flatbuffers/: flatbuffers_behavior_attrs_tests.cpp  flatbuffers_object_tests.cpp  flatbuffers_torture_tests.cpp
tests/unit/codec/flatcode/: flatcode_proxy_tests.cpp  flatcode_tests.cpp
tests/unit/codec/json/: content_to_json_tests.cpp  schema_snapshot_tests.cpp  simdjson_attrs_tests.cpp  simdjson_config_tests.cpp  simdjson_error_message_tests.cpp  simdjson_tagged_variant_tests.cpp  simdjson_tests.cpp  simdjson_variant_detail_tests.cpp
tests/unit/codec/json/snapshots/: schema_snapshot_tests__adjacent_tagged.snap  schema_snapshot_tests__combo_struct.snap  schema_snapshot_tests__external_tagged.snap  schema_snapshot_tests__internal_tagged.snap  schema_snapshot_tests__nested_containers.snap  schema_snapshot_tests__person.snap  schema_snapshot_tests__person_with_scores.snap  schema_snapshot_tests__tagged_field_struct.snap
tests/unit/codec/schema/: fbs_tests.cpp  json_schema_tests.cpp
tests/unit/codec/toml/: toml_error_message_tests.cpp  toml_tests.cpp
tests/unit/codec/yaml/: yaml_tests.cpp
tests/unit/common/: functional.cpp  functional_tests.cpp
tests/unit/deco/: backend.cc  decl.cc  demos.cc  descriptor.cc  git.cc  runtime.cc  serialize.cc
tests/unit/http/: http_tests.cpp  server_self_test.cpp
tests/unit/ipc/: peer_lifecycle_tests.cpp  peer_logger_tests.cpp  peer_test_types.h  peer_tests.cpp  test_transport.h  transport_tests.cpp
tests/unit/ipc/lsp/: position_tests.cpp  uri_tests.cpp
tests/unit/meta/: compare_tests.cpp
tests/unit/meta/codegen/: fbs_tests.cpp
tests/unit/meta/schema/: behavior_attrs_tests.cpp  kind_of_tests.cpp  recursive_fields_tests.cpp  rename_all_tests.cpp  schema_attrs_tests.cpp  slots_tests.cpp  type_info_tests.cpp
tests/unit/option/: option_tests.cpp
tests/unit/reflection/: name_tests.cpp
tests/unit/serde/: standard_case_suite.h
tests/unit/serde/bincode/: bincode_tests.cpp  bincode_torture_tests.cpp  serde_error_tests.cpp
tests/unit/serde/content/: yyjson_torture_tests.cpp
tests/unit/serde/flatbuffers/: flatbuffers_object_tests.cpp  flatbuffers_schema_tests.cpp  flatbuffers_torture_tests.cpp
tests/unit/serde/json/: simdjson_attrs_tests.cpp  simdjson_config_tests.cpp  simdjson_error_message_tests.cpp  simdjson_tests.cpp  simdjson_torture_tests.cpp
tests/unit/serde/schema/: behavior_attrs_tests.cpp  json_schema_tests.cpp  kind_of_tests.cpp  rename_all_tests.cpp  schema_attrs_tests.cpp  slots_tests.cpp  type_info_tests.cpp
tests/unit/serde/toml/: toml_error_message_tests.cpp  toml_torture_attrs_tests.cpp  toml_torture_tests.cpp
tests/unit/support/: cow_string_tests.cpp  functional_tests.cpp  glob_pattern_tests.cpp
tests/unit/zest/: snap_test.cpp  snapshot_tests.cpp
tests/unit/zest/__snapshots__/: zest_snap__snapshot_json_struct.snap  zest_snap__snapshot_json_vector.snap  zest_snap__snapshot_yaml_struct.snap
tests/unit/zest/snapshots/: snapshot_tests__empty_string.snap  snapshot_tests__json_map.snap  snapshot_tests__json_vector.snap
tests/zest/: check_tests.cpp
(+469 files in other folders)
